--- a/movies.html
+++ b/movies.html
@@ -21,7 +21,8 @@
         <div style="display: block;
         margin-left: auto;
         margin-right: auto;
-        width:50%;">
+        width:50%;
+        padding-bottom:2%;">
 
 <table style="display: block;
 margin-left: auto;
