--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+<link rel="icon" type="image/x-icon" href="./images/pink-wrld.png">
 <body style="font-family: 'Roboto', sans-serif;" >
     <div class="container">
         <div style="background-color:rgb(252, 232, 255);border:3px solid black;margin:15px;">
