--- a/movies.html
+++ b/movies.html
@@ -16,7 +16,7 @@
     margin-left: auto;
     margin-right: auto;">
         <a href="index.html" style="text-decoration: none;">
-        <h2 style="padding:2% 2% 1% 2%;text-align: left;">Go Back</h3>
+        <h2 style="padding:2% 2% 1% 2%;text-align: left;color:black;">Go Back</h3>
         </a>
         <h1 style="padding:1%;text-align: center;">Top 100 Favorite Movies</h1>
         <div style="display: block;
