--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <th scope="row" class="row-header">Piece:</th>
-                    <td>Tschaikowsky: Symp 4. II</td>
+                    <td>Tchaikovsky: Symp 4. II</td>
                 </tr>
                 <tr>
                     <th scope="row" class="row-header">Heroes:</th>
